--- a/similar/package.json
+++ b/similar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@100xdevs/common",
+  "name": "@lkshhdev/similar",
   "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   }
 }
