--- a/similar/tsconfig.json
+++ b/similar/tsconfig.json
@@ -104,9 +104,9 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,
     "rootDir": "src",
     "outDir": "dist",
-    "declaration": true
+    "declaration": true                                 /* Skip type checking all .d.ts files. */
   }
 }
